[package]
name = "openapi"
version = "0.10.9"
authors = ["OpenAPI Generator team and contributors"]
description = "API for LNbits, the free and open source bitcoin wallet and accounts system with plugins."
license = "MIT License"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
